Bug 182341 - Crash when closing profile mgr window with 'X' close box. Due to a static nsCOMPtr which, because it was static, was destroyed too late. r=racham/sr=alecf